<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relativelayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.NoActionBar"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ImageView
        android:id="@+id/member_image"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/appbarlayout"
        android:layout_marginTop="@dimen/standard_large"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_marginTop="@dimen/standard_large"
        android:id="@+id/member_name"
        android:layout_below="@+id/member_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:text="@string/member_name"
        android:fontFamily="@font/comfortaa"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_marginTop="@dimen/small"
        android:id="@+id/member_position"
        android:layout_below="@+id/member_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:text="@string/member_position"
        android:fontFamily="@font/comfortaa"
        android:gravity="center_horizontal" />
    <View
        android:layout_marginTop="@dimen/standard_large"
        android:id="@+id/line_divider"
        android:layout_below="@+id/member_position"
        style="@style/Divider"/>
    <ScrollView
        android:layout_below="@+id/line_divider"
        android:id="@+id/details_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/standard_large">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/Detail_Header"
                android:text="@string/personality"/>
            <TextView
                android:id="@+id/member_personality"
                style="@style/Detail_Text_Block"
                android:text="@string/cat_ipsum"/>
            <TextView
                style="@style/Detail_Header"
                android:text="@string/interests"/>
            <TextView
                android:id="@+id/member_interests"
                style="@style/Detail_Text_Block"
                android:text="@string/cat_ipsum"/>
            <TextView
                style="@style/Detail_Header"
                android:text="@string/preferences"/>
            <TextView
                android:id="@+id/member_preferences"
                style="@style/Detail_Text_Block"
                android:text="@string/cat_ipsum"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>